--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
         android:id="@+id/recycler_itemlist"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="6"
+        android:layout_weight="10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -19,10 +19,10 @@
     <Button
         android:id="@+id/button_main_insert"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_marginBottom="30dp"
+        android:layout_height="0dp"
         android:layout_weight="1"
-        android:height="55dp"
-        android:text="Button" />
+        android:layout_marginBottom="50dp"
+        android:height="20dp"
+        android:text="Add Dummy Item" />
 
 </LinearLayout>
