--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,5 +6,9 @@
         android:title = "검색"
         app:showAsAction="always"
         />
+    <item android:id="@+id/action_add"
+        android:title = "+"
+        app:showAsAction="always"
+        />
 
 </menu>
