--- a/app/src/main/res/layout/activity_item_add.xml
+++ b/app/src/main/res/layout/activity_item_add.xml
@@ -9,6 +9,12 @@
     android:layout_marginRight="20dp"
     tools:context=".ItemAddActivity">
 
+    <ImageView
+        android:id="@+id/itemadd_img"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        tools:srcCompat="@drawable/ic_image" />
+
     <EditText
         android:id="@+id/itemadd_title"
         android:layout_width="match_parent"
