--- a/app/src/main/res/layout/activity_item_detailed.xml
+++ b/app/src/main/res/layout/activity_item_detailed.xml
@@ -33,5 +33,17 @@
         android:id="@+id/detailed_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="description" />
+
+    <TextView
+        android:id="@+id/detailed_writer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="writer" />
+
+    <TextView
+        android:id="@+id/detailed_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="date" />
 </LinearLayout>
