--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,6 +56,14 @@
         android:inputType="textPassword"
         android:selectAllOnFocus="true" />
 
+    <CheckBox
+        android:id="@+id/autologin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:text="자동 로그인" />
+
     <Button
         android:id="@+id/login"
         android:layout_width="match_parent"
