채팅 방 리스트 불러오기 성공

--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -21,8 +21,8 @@
 
             <ImageView
                 android:id="@+id/itemlist_thumbnail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="163dp"
+                android:layout_height="154dp"
                 tools:srcCompat="@tools:sample/avatars[5]" />
 
             <LinearLayout
